--- a/report/src/sections/appendix/04-shuffling-times.tex
+++ b/report/src/sections/appendix/04-shuffling-times.tex
@@ -1,7 +1,7 @@
 \clearpage
 \section{Shuffling results}\label{sec:shuffling-results}
-Here we present the results of the shuffling times given different shuffling size values.
-The results can be seen in~\autoref{fig:shufflespeed}
+Here, we present the results of the shuffling times given different shuffling size values.
+The results can be seen in~\autoref{fig:shufflespeed}.
 \begin{figure}[!htb]
     \includegraphics[width=0.99\columnwidth]{figures/results/shufflingtime}
     \caption{The shuffling times at each benchmark}%
