Missed symbol conversion

--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -45,7 +45,7 @@ The notation used throughout this paper can be seen in~\autoref{tab:notation}.
         & Slices of vectors (Python notation) \\
         \hline
         $\left\{\phi; w\middle|\textit{ properties satisfying }\phi,w\right\}$
-        & Relation using the specified public input $phi$ and private witness $w$ \\
+        & Relation using the specified public input $\phi$ and private witness $w$ \\
         \hline
     \end{tabular}
     \caption{Notation used throughout the paper.}
