Mentioning cups before we introduce the metaphor

--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -253,9 +253,9 @@ An adversary can choose to do anything with its shuffle, including not shuffling
 Hence, an adversarial shuffle can be seen as no shuffling being done.
 Therefore, the number of honest shuffles that happen during the shuffle process is $T_H = T - \beta$, where $\beta$ is the number of adversarial shuffles.
 
-The adversary can also track cups.
-For instance, if the adversary owns some of the cups.
-Those tracked cups are denoted by~$\alpha$, which is $\leq n$.
+The adversary can also track ciphertexts.
+For instance, if the adversary owns some of the ciphertexts.
+Those tracked ciphertexts are denoted by~$\alpha$, which is $\leq n$.
 
 The shuffle is secure if none of the following two events occur.
 The first event is a short backtracking, where an adversary can find the original ciphertexts from the shuffled ciphertexts.
