--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -95,7 +95,7 @@ while $1\leq j\leq m:$
     $\textbf{d}\gets\textbf{dS}\|\textbf{d}_{[:n]}+\gamma_j\textbf{d}_{[n:]}$
     $\textbf{G}\gets\textbf{GS}\|\textbf{G}_{[:n]}+\gamma_j\textbf{G}_{[n:]}$
     $\textbf{G}'\gets\textbf{GS}'\|\textbf{G}'_{[:n]}+\gamma_j^{-1}\textbf{G}'_{[n:]}$
-    $n\gets len(c)$
+    $n\gets \text{len}(\textbf{c})$
 $\textbf{Step 3:}$ #Final proof element
 $c\gets c_1$
 $d\gets d_1$
