--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -95,7 +95,8 @@ In our preliminary work~\cite{ouroldpaper}, we show that the attack is still pos
 As a response to the proposer~\gls{dos} attack, Ethereum proposed a new protocol called Whisk~\cite{Whisk2024} to mitigate the attack.
 
 Whisk is a~\gls{zk}~\gls{ssle} system that uses a~\gls{zk} argument called Curdleproofs~\cite{Curdleproofs} to verify the correctness of a shuffle with size $\ell$ without revealing the input or output~\cite{10.1145/3419614.3423258}.
-Whisk works by selecting a list of 16,384 validator trackers, and then the following 8,192 block proposers shuffle them over 8,192 slots ($\sim$1 day).
+Whisk works by selecting a list of 16,384 validator trackers of the form $(rG, krG)$, where $k$ is a secret known by the validator, $r$ some randomness, and $G$ is a cryptographic generator.
+Then, the following 8,192 block proposers shuffle the trackers over 8,192 slots ($\sim$1 day).
 Then, 8,192 proposers are selected from the shuffled list to propose blocks for the next 8,192 slots while a new list is being shuffled.
 This way, a new list of proposers is created every day.
 After each shuffle, Whisk uses a~\gls{zkp} to prove that the shuffle is correct.
@@ -104,7 +105,8 @@ Whenever a proposer is chosen, they can prove that they are the correct proposer
 Therefore, Whisk mitigates the proposer~\gls{dos} attack because the identities of the upcoming proposers are now hidden.
 
 Curdleproofs is a~\gls{zkp} system used by Whisk that allows a prover to prove knowledge of a shuffle without revealing the specific order in which the elements were shuffled.
-It does so by using three different~\glspl{zkp}, with one of them relying on two more \glspl{zkp}.
+It takes as input the pre-shuffled sets $\mathbf{R}$ and $\mathbf{S}$, the shuffled sets $\mathbf{T}$ and $\mathbf{U}$, and a commitment $M$ to the permutation~$\sigma$.
+The protocol then constructs the proof using three different~\glspl{zkp}, with one of them relying on two more \glspl{zkp}.
 The overview can be seen in~\autoref{fig:curdleproof-protocol}.
 
 \begin{figure}[!ht]
@@ -116,11 +118,11 @@ The overview can be seen in~\autoref{fig:curdleproof-protocol}.
         \node  at (3.2,11.25) {Input};
         \draw [->, >=Stealth] (5.75,10.75) -- (5.75,10.25);
         \draw[rounded corners]  (4,10.25) rectangle (7.75,9.25);
-        \node  at (5.875,9.75) {$T=\sigma(k\mathbf{R})$, $U=\sigma(k\mathbf{S})$};
+        \node  at (5.875,9.75) {$\mathbf{T}=\sigma(k\mathbf{R})$, $\mathbf{U}=\sigma(k\mathbf{S})$};
         \node  at (2.875,9.75) {Statement};
         \draw [->, >=Stealth] (5.75,9.25) -- (5.75,8.75);
         \draw[rounded corners]  (4,8.75) rectangle (7.75,7.75);
-        \node  at (5.75,8.25) {$\mathbf{a\leftarrow}$Fiat-Shamir};
+        \node  at (5.75,8.25) {$\mathbf{a}\leftarrow$Fiat-Shamir};
         \draw [->, >=Stealth] (5.75,7.75) -- (5.75,7.25);
         \draw[rounded corners]  (3.75,7.25) rectangle (8,5.75);
         \node  at (5.75,6.75) {A=$\sigma(\mathbf{a})\times \mathbf{g}$};
