--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -18,6 +18,8 @@ The notation used throughout this paper can be seen in~\autoref{tab:notation}.
         \hline
         $H\in\mathbb{G}$ & Generator of $\mathbb{G}$ \\
         \hline
+        $\ell\in\mathbb{Z}$ & Number of shuffled ciphertexts in the Whisk protocol \\
+        \hline
         $\mathbf{\gamma}\in\mathbb{Z}_p^{\lceil\log n\rceil}$ & Uniformly distributed challenges \\
         \hline
         $\mathbf{a}\in\mathbb{F}^n$ & Vector $\mathbf{a}=(a_1,\dots,a_n)\in\mathbb{F}^n$ \\
