--- a/report/src/sections/09-future-works.tex
+++ b/report/src/sections/09-future-works.tex
@@ -22,7 +22,7 @@ Currently, however, there does not exist a~\gls{nizk} proof of shuffle based on 
 
 
 When using Whisk in the Ethereum blockchain, a list of upcoming proposers is still chosen and published some time before they are needed for duty.
-However, because upcoming proposers are published as trackers that can only be opened and proven by the chosen validator, attacks such as~\gls{dos} attacks are significantly harder to perform accurately.
+However, because upcoming proposers are published as trackers that can be opened and proven by the chosen validator, attacks such as~\gls{dos} attacks are significantly harder to perform accurately.
 Though, the first part of the proposer~\gls{dos} attack involves de-anonymizing validators, as demonstrated by Heimbach et al.~and confirmed by our research~\cite{heimbach2024deanonymizingethereumvalidatorsp2p,ouroldpaper}.
 Even if the blockchain is using Whisk, it is still possible for an adversary to gather and de-anonymize validator IP addresses only by running a node on the network.
 A sustainable solution for this, therefore, needs to be found.
