--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -25,15 +25,15 @@ The computation is for finding the set,~$T$.
     \begin{lstlisting}[language=Python,mathescape=true,label={lst:schemefunc},numbers=right,caption={Scheme function \textbf{\textit{f}} used in CAAUrdleproofs},captionpos=b,frame=single]
     input: $n$, where $n>0$
 
-    $\{n\}\gets n$
+    $\mathbf{n}\gets \{1..n\}$
     $N\gets 2^{\lceil\log n\rceil-1}$
     $i_h \gets \lfloor (2N-n)/2\rfloor+1$
     $i_t=\lfloor n/2\rfloor$
     if $n\neq N$: #Not power of 2
-        $\{T\}\gets(i_h:i_t)\cup(N+1:n)$
+        $\mathbf{T}\gets\{i_h:i_t\}\cup\{N+1:n\}$
     else if $n=N$: #Power of 2
-        $\{T\}\gets(1:n)$ #Meaning S is empty
-    $\{S\}\gets\{n\}-\{T\}$
+        $\mathbf{T}\gets\{1:n\}$ #Meaning S is empty
+    $\mathbf{S}\gets\mathbf{n}-\mathbf{T}$
     \end{lstlisting}
 \label{fig:schemefunc}
 \end{figure}
@@ -67,6 +67,7 @@ The construction can be seen in~\autoref{lst:ipa-prover}.
 \begin{figure}[!htb]
     \begin{lstlisting}[language=Python,mathescape=true,label={lst:ipa-prover},numbers=right,caption={Prover computation for CAAU-IPA in CAAUrdleproofs},captionpos=b,frame=single]
 $\textbf{Step 1:}$ #Setup phase
+$(\mathbf{c},\mathbf{d},z,C,D)\gets$parse$(input)$
 $(\textbf{G},\textbf{G}',H)\gets$parse$(crs_{dl_{inner}})$
 $\textbf{r}_C,\textbf{r}_D\overset{\$}{\leftarrow}\mathbb{F}^n$ #Vector blinders
  where $(\textbf{r}_C\times \textbf{d} + \textbf{r}_D\times \textbf{c})=0\text{ and }\textbf{r}_C\times \textbf{r}_D=0$
@@ -79,12 +80,12 @@ $H\gets\beta H$
 $\textbf{Step 2:}$ #Recursive protocol
 $m\gets \lceil \log n\rceil$
 while $1\leq j\leq m:$
-    $T,S\gets \textbf{\textit{f(}}n\textbf{\textit{)}}$ #Scheme function
-    $n\gets \frac{|T|}{2}$
-    $\textbf{c}\gets\textbf{c}_T$, $\textbf{cS}\gets\textbf{c}_S$ #Vector splitting
-    $\textbf{d}\gets\textbf{d}_T$, $\textbf{dS}\gets\textbf{d}_S$
-    $\textbf{G}\gets\textbf{G}_T$, $\textbf{GS}\gets\textbf{G}_S$
-    $\textbf{G}'\gets\textbf{G}'_T$, $\textbf{GS}'\gets\textbf{G}'_T$
+    $\mathbf{T},\mathbf{S}\gets \textbf{\textit{f(}}n\textbf{\textit{)}}$ #Scheme function
+    $n\gets \frac{|\mathbf{T}|}{2}$
+    $\textbf{c}\gets\textbf{c}_\mathbf{T}$, $\textbf{cS}\gets\textbf{c}_\mathbf{S}$ #Vector splitting
+    $\textbf{d}\gets\textbf{d}_\mathbf{T}$, $\textbf{dS}\gets\textbf{d}_\mathbf{S}$
+    $\textbf{G}\gets\textbf{G}_\mathbf{T}$, $\textbf{GS}\gets\textbf{G}_\mathbf{S}$
+    $\textbf{G}'\gets\textbf{G}'_\mathbf{T}$, $\textbf{GS}'\gets\textbf{G}'_\mathbf{S}$
     $L_{C,j}\gets\textbf{c}_{[:n]}\times\textbf{G}_{[n:]}+(\textbf{c}_{[:n]}\times\textbf{d}_{[n:]})H$ #Cross-comm
     $L_{D,j}\gets\textbf{d}_{[n:]}\times\textbf{G}'_{[:n]}$
     $R_{C,j}\gets\textbf{c}_{[n:]}\times\textbf{G}_{[:n]}+(\textbf{c}_{[n:]}\times\textbf{d}_{[:n]})H$
@@ -106,37 +107,38 @@ return $(B_C,B_D,\mathbf{\pi},c,d)$ # Elements for verifier
 \end{figure}
 First, we have step 1, which is the setup phase.
 It is implemented the same way as in Curdleproofs.
-In line 2, the prover gets the cryptographic generators, $\mathbf{G}$, $\mathbf{G}'$ and $H$, which are going to be used for commitment constructions.
-To ensure zero-knowledge, two blinding vectors for each commitment are constructed on lines 3--4.
+From the prover input, line 2, we obtain the vectors $\mathbf{c}$ and $\mathbf{d}$, whose inner product we aim to prove is equal to $z$, as well as the commitments $C$ and $D$.
+In line 3, the prover gets the cryptographic generators, $\mathbf{G}$, $\mathbf{G}'$ and $H$, which are going to be used for commitment constructions.
+To ensure zero-knowledge, two blinding vectors for each commitment are constructed on lines 4--5.
 These are also given the properties, $(\mathbf{r}_C\times \mathbf{d}+\mathbf{r}_D\times \mathbf{c})=0$~and~ $\mathbf{r}_C\times\mathbf{r}_D=0$, ensuring the completeness of the protocol.
 
-After this, commitments to the blinding vectors are constructed as $B_C$ and $B_D$ on lines 5--6.
+After this, commitments to the blinding vectors are constructed as $B_C$ and $B_D$ on lines 6--7.
 These will eventually be used for verification by the verifier.
 
-From the public input, hash values $\alpha,\beta$ are then computed on line 7.
+From the public input, hash values $\alpha,\beta$ are then computed on line 8.
 These are used to ensure the soundness of the protocol.
 
-On lines 8--10, the two vectors are then blinded and multiplied by the $\alpha$ hash to ensure the zero-knowledge and soundness, as well as $H=\beta H$.
+On lines 9--11, the two vectors are then blinded and multiplied by the $\alpha$ hash to ensure the zero-knowledge and soundness, as well as $H=\beta H$.
 
 
 Now, the recursive proof construction, and step 2, begins.
-As explained, at the start of the recursive round, line 13, we find the split of the vectors on line 14, with $f(n)$ being the scheme function from~\autoref{lst:schemefunc}.
-Then, on line 15, we find half the length of the $T$ set, as it is the set we are doing the recursive folding round on.
-Equally, on lines 16--19, we split our witness vectors and the group vectors using $T$ and $S$.
+As explained, at the start of the recursive round, line 14, we find the split of the vectors on line 15, with $f(n)$ being the scheme function from~\autoref{lst:schemefunc}.
+Then, on line 16, we find half the length of the $T$ set, as it is the set we are doing the recursive folding round on.
+Equally, on lines 17--20, we split our witness vectors and the group vectors using $T$ and $S$.
 
-After this, the prover constructs cross-commitment elements on lines 20--23 that are computed on the $T$ set.
-These are added to the proof on line 24, which eventually is available to the verifier.
-They are also used to construct a hash value,~$\gamma_j$, in the next step on line 25.
+After this, the prover constructs cross-commitment elements on lines 21--24 that are computed on the $T$ set.
+These are added to the proof on line 25, which eventually is available to the verifier.
+They are also used to construct a hash value,~$\gamma_j$, in the next step on line 26.
 
-This value is used on lines 26--29 for completing the folding of $\mathbf{c},\mathbf{d},\mathbf{G},\mathbf{G'}$.
+This value is used on lines 27--30 for completing the folding of $\mathbf{c},\mathbf{d},\mathbf{G},\mathbf{G'}$.
 We do the fold as in the original Curdleproofs protocol while also appending the elements of $S$ back onto the vectors.
 The figure shows a concatenation, but it is important to know that the vectors are appended together as shown in~\autoref{fig:fold}(b).
 
-At the end of the recursive round, on line 30,~$n$ is updated to the length of the concatenated vectors before starting a new round.
+At the end of the recursive round, on line 31,~$n$ is updated to the length of the concatenated vectors before starting a new round.
 
 The result of this is a proof,~$\mathbf{\pi}$, constructed in $\lceil \log n \rceil$ rounds, but with the proof size being smaller than if the shuffle size was a power of 2.
 
-In step 3, lines 31--35, the folded vectors of size 1 are added to the proof as values as well as the commitments to the blinding values,~$B_C$ and~$B_D$.
+In step 3, lines 32--36, the folded vectors of size 1 are added to the proof as values as well as the commitments to the blinding values,~$B_C$ and~$B_D$.
 The proof, folded vectors, and updated commitment are saved for the verifier to use for verification.
 
 
@@ -160,10 +162,10 @@ $D\gets B_D+\alpha D$
 $\textbf{Step 2:}$ #Recursive round
 $m\gets \lceil\log n\rceil$
 for $1\leq j\leq m$
-    $T,S\gets \textbf{\textit{f(}}n\textbf{\textit{)}}$ #Scheme function
-    $n\gets \frac{|T|}{2}$
-    $\textbf{G}=\textbf{G}_T$, $\textbf{GS}=\textbf{G}_S$ #Vector splitting
-    $\textbf{G}'=\textbf{G}'_T$, $\textbf{GS}'=\textbf{G}'_T$
+    $\mathbf{T},\mathbf{S}\gets \textbf{\textit{f(}}n\textbf{\textit{)}}$ #Scheme function
+    $n\gets \frac{|\mathbf{T}|}{2}$
+    $\textbf{G}=\textbf{G}_\mathbf{T}$, $\textbf{GS}=\textbf{G}_\mathbf{S}$ #Vector splitting
+    $\textbf{G}'=\textbf{G}'_\mathbf{T}$, $\textbf{GS}'=\textbf{G}'_\mathbf{S}$
     $(L_{C,j},L_{D,j},R_{C,j},R_{D,j})\gets$parse$(\pi_j)$ #Proof elem
     $\gamma_j\gets$Hash$(\pi_j)$ #Folding challenges
     $C\gets\gamma_j L_{C,j}+C+\gamma_j^{-1}R_{C,j}$ #Update comms
@@ -175,7 +177,7 @@ for $1\leq j\leq m$
 $\textbf{Step 3:}$ #Final check
 Check $C=c\times G_1+cdH$ #Initial ?= Folded
 Check $D=d\times G'_1$
-return 1 $\text{if both checks pass, else}$ return 0
+return 1 $\text{if both checks pass, otherwise}$ return 0
 \end{lstlisting}
 \label{fig:ipa-verifier}
 \end{figure}
@@ -309,11 +311,11 @@ $\alpha,\beta\gets$Hash$(C,D,z,B_C,B_D)$ #FS challenges
 $\textbf{Step 2:}$ #Recursive phase
 $m\gets \lceil\log n\rceil$
 for $1\leq j\leq m$
-    $T,S\gets \textbf{\textit{f(}}n\textbf{\textit{)}}$ #Scheme function
-    $n\gets \frac{|T|}{2}$
+    $\mathbf{T},\mathbf{S}\gets \textbf{\textit{f(}}n\textbf{\textit{)}}$ #Scheme function
+    $n\gets \frac{|\mathbf{T}|}{2}$
     $(L_{C,j},L_{D,j},R_{C,j},R_{D,j})\gets$parse$(\pi_j)$ #Proof elem
     $\gamma_j\gets$Hash$(\pi_j)$ #Folding challenges
-    $n\gets n+\text{len}(S)$
+    $n\gets n+|\mathbf{S}|$
 
 $\textbf{Step 3:}$ # Accumulated checking phase
 $\mathbf{CP}\text{: }\mathbf{\gamma}\gets(\gamma_m,...,\gamma_1)$ #Construction difference
