--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -55,8 +55,8 @@ The results of the shuffle security experiment are shown in \autoref{fig:shuffle
 
 We can see that the bigger the shuffle size $\ell$ is, the less honest shuffles are necessary to make the shuffle secure.
 In Ethereum, each shuffling phase is limited to 8,192 shuffles, meaning that the maximum number of honest shuffles that can be used is 8,192.
-Therefore, the results of the experiment find $T_H=T-\beta$.
-$T_H$~is how many of the $T$ shuffles available during the shuffling phase are needed to be honest.
+Therefore, the results of the experiment find $Q_H=Q-\beta$.
+$Q_H$~is how many of the $Q$ shuffles available during the shuffling phase are needed to be honest.
 The rest is, therefore, the maximum number of dishonest shuffles allowed,~$\beta$.
 We also see that the bigger the shuffle size, the narrower the standard deviation gets.
 
