Capitalization of section titles

--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -223,7 +223,7 @@ If so, the verifier accepts the proof.
 \end{theorem}
 
 
-\subsection{Shuffle security}\label{subsec:approach-shuffle-security}
+\subsection{Shuffle Security}\label{subsec:approach-shuffle-security}
 The shuffle method proposed by Larsen et al.~\cite{cryptoeprint:2022/560} that is used in Curdleproofs is based on the idea of shuffling a list of proposers over a set of slots.
 A formal definition of the shuffle is given in~\autoref{fig:shuffle}.
 
@@ -397,7 +397,7 @@ The experiment indicates the number of rounds before the shuffle was secure.
 
 By repeating this experiment for several runs, one can experimentally say when a shuffle with given parameters is secure.
 
-\subsubsection{Size reduction}
+\subsubsection{Size Reduction}
 If we reduce the shuffle size used in Whisk and still prove it secure, then we expect to see a reduction in the size overhead on the blockchain.
 
 We first set our focus on Curdleproofs, as this is the protocol we have modified directly.
