--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -29,7 +29,7 @@ However, that was to be expected since CAAUrdleproofs uses the same shuffling al
 
 
 
-\subsection{Shuffle security}\label{subsec:Shuffle-security}
+\subsection{Shuffle Security}\label{subsec:Shuffle-security}
 
 \begin{figure}[!htb]
     \centering
