--- a/report/src/sections/07-discussion.tex
+++ b/report/src/sections/07-discussion.tex
@@ -5,7 +5,7 @@ In this section, we will discuss the results of the experiments in \autoref{sec:
 We will also discuss some of the limitations of the CAAUrdleproofs protocol and how it compares to Curdleproofs.
 
 
-\subsection{CAAUrdleproofs in comparison to Curdleproofs}\label{subsec:CAAUrdleproofs-vs-Curdleproofs}
+\subsection{CAAUrdleproofs in Comparison to Curdleproofs}\label{subsec:CAAUrdleproofs-vs-Curdleproofs}
 As mentioned in~\autoref{subsec:results:provingverifying}, the proving and verifying times between the two protocols are close to identical when $\ell$ is a power of two.
 This is because the added computation is negligible compared to the other computations present in the original Curdleproofs protocol.
 
