--- a/report/src/sections/09-future-works.tex
+++ b/report/src/sections/09-future-works.tex
@@ -1,4 +1,4 @@
-\section{Future work}\label{sec:future-works}
+\section{Future Work}\label{sec:future-works}
 In this section, we will focus on areas where the Whisk protocol still has room for improvement.
 
 The main modification from Curdleproofs to CAAUrdleproofs is the added flexibility in choosing the shuffle size for Whisk.
