--- a/report/src/sections/appendix/04-shuffling-times.tex
+++ b/report/src/sections/appendix/04-shuffling-times.tex
@@ -1,5 +1,5 @@
 \clearpage
-\section{Shuffling results}\label{sec:shuffling-results}
+\section{Shuffling Results}\label{sec:shuffling-results}
 Here, we present the results of the shuffling times given different shuffling size values.
 The results can be seen in~\autoref{fig:shufflespeed}.
 \begin{figure}[!htb]
