--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -30,7 +30,7 @@
 \newacronym{eth}{ETH}{ether}
 \newacronym{grandprod}{GrandProd}{Grand Product}
 \newacronym{dlipa}{DL IPA}{Discrete-Logarithm Inner Product Argument}
-\newacronym{wipa}{WIPA}{Weighted Innner Product Argument}
+\newacronym{wipa}{WIPA}{Weighted Inner Product Argument}
 \newacronym{csidh}{CSIDH}{Commutative Supersingular Isogeny Diffie-Hellman}
 \newacronym{gaip}{GAIP}{Group Action Inverse Problem}
 \newacronym{nizk}{NIZK}{Non-Interactive Zero-Knowledge}
